test/besic/java/Java04_Varaible.java
package besic.java;

public class Java04_Varaible {

    public static void main(String[] arry) {
        char letter = 'L';
        System.out.println(letter);
        String myName = "lay longhav";
        System.out.println(myName);
        int myNum = 15;
        System.out.println(myNum);
        int myNum1;
        myNum1 = 15;
        System.out.println(myNum1);
        int myNum2;
        myNum2 = 15;
        myNum2 = 20;
        System.out.println(myNum2);
        final int myNum3 = 15;
        //myNum3 = 15;//error
        int yNum4 = 5;
        float myfloatNum = 5.99f;
        Double mydoube = 5.99d;
        Boolean myBool = true;
        System.out.println(myfloatNum);
        System.out.println(mydoube);
        System.out.println(myBool);
        String myText = "Hello";
        System.out.println(myText);

    }
}
